Fix issue where buttons could wrap on sidebar.

--- a/frontend/public/components/cluster-settings/_cluster-settings.scss
+++ b/frontend/public/components/cluster-settings/_cluster-settings.scss
@@ -19,8 +19,7 @@
 }
 
 .co-p-cluster__sidebar {
-  flex: 0 2 340px;
-  font-size: 13px;
+  flex: 0 2 350px;
   min-width: 340px;
   overflow-x: hidden;
   overflow-y: auto;
